# Oscilatory-Analysis

./: .gitattributes  .gitignore  FFT.h  LICENSE  README.md  main.c  pyproject.toml  sample.csv
c/: DFT.c  FFT.c
data/: sample.csv
python/: notebook.ipynb  template.ipynb
