[build-system]
requires = ["setuptools>=42"]

[project]
name = "oscillib"
description = "Oscillatory data analysis and plotting"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Mateus Oliveira Dogan", email = "mateusdogan14@gmail.com"}]
version = "0.1.0"

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "jupyter>=1.0",
    "ipykernel>=6.0"
]

[project.scripts]
make-csv = "oscillib.csvgen:main"
plot-data = "oscillib.plotter:main"
